fixing broken CSS

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -36,12 +36,6 @@
   color: #61dafb;
 }
 
-.portfolio-gig {
-  height: 30vmin;
-  width: 30vmin;
-  align: left;
-}
-
 /* ==============
   Pop-up Classes
 =================*/
